// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should match the snapshot 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  pointer-events: none;
}

.c3 {
  display: block;
  margin-bottom: 5px;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4c4c4c;
  cursor: inherit;
  font-size: 16px;
  left: 0;
  margin-bottom: 0;
  min-height: 24px;
  padding-left: 24px;
  top: 0;
}

.c3:before {
  background-color: #FFFFFF;
  border-radius: 2px;
  border: 2px solid #999999;
  box-sizing: border-box;
  content: ' ';
  display: inline-block;
  height: 18px;
  left: 0;
  position: absolute;
  top: 3px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
}

.c1 {
  cursor: pointer;
  height: 18px;
  height: 100%;
  margin: 0;
  opacity: 0;
  pointer-events: initial;
  position: absolute;
  width: 100%;
}

.c1:checked + .c2:before {
  background-color: #1355d0;
  border-width: 0;
}

.c1:checked + .c2:after {
  border-radius: 1px;
  border: solid #FFFFFF;
  border-width: 0 2.5px 2.5px 0;
  content: ' ';
  display: inline-block;
  height: 11px;
  left: 6px;
  position: absolute;
  top: 3px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 4px;
}

.c1:hover + .c2:before {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] + .c2 {
  color: #999999;
}

.c1[disabled] + .c2:before {
  border-color: #999999;
  background-color: #cccccc;
}

.c1[disabled]:checked + .c2:before {
  background-color: #999999;
}

.c1[disabled]:hover + .c2:before {
  box-shadow: none;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id=""
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="c2 c3"
    htmlFor=""
  >
    Label
  </label>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  pointer-events: none;
}

.c3 {
  display: block;
  margin-bottom: 5px;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4c4c4c;
  cursor: inherit;
  font-size: 16px;
  left: 0;
  margin-bottom: 0;
  min-height: 24px;
  padding-left: 24px;
  top: 0;
}

.c3:before {
  background-color: #FFFFFF;
  border-radius: 2px;
  border: 2px solid #999999;
  box-sizing: border-box;
  content: ' ';
  display: inline-block;
  height: 18px;
  left: 0;
  position: absolute;
  top: 3px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
}

.c5:checked + .c2:before {
  background-color: #1355d0;
  border-width: 0;
}

.c5:checked + .c2:after {
  border-radius: 1px;
  border: solid #FFFFFF;
  border-width: 0 2.5px 2.5px 0;
  content: ' ';
  display: inline-block;
  height: 11px;
  left: 6px;
  position: absolute;
  top: 3px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 4px;
}

.c5:hover + .c2:before {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c5[disabled] + .c2 {
  color: #999999;
}

.c5[disabled] + .c2:before {
  border-color: #999999;
  background-color: #cccccc;
}

.c5[disabled]:checked + .c2:before {
  background-color: #999999;
}

.c5[disabled]:hover + .c2:before {
  box-shadow: none;
}

.c1 {
  cursor: pointer;
  height: 18px;
  height: 100%;
  margin: 0;
  opacity: 0;
  pointer-events: initial;
  position: absolute;
  width: 100%;
}

.c1:checked + .c2:before {
  background-color: #1355d0;
  border-width: 0;
}

.c1:checked + .c2:after {
  border-radius: 1px;
  border: solid #FFFFFF;
  border-width: 0 2.5px 2.5px 0;
  content: ' ';
  display: inline-block;
  height: 11px;
  left: 6px;
  position: absolute;
  top: 3px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 4px;
}

.c1:hover + .c2:before {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1 + .c2:before {
  border-color: #ff2d4d;
}

.c1:checked + .c2:before {
  background-color: #ff2d4d;
}

.c1:hover + .c2:before {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] + .c2 {
  color: #999999;
}

.c1[disabled] + .c2:before {
  border-color: #999999;
  background-color: #cccccc;
}

.c1[disabled]:checked + .c2:before {
  background-color: #999999;
}

.c1[disabled]:hover + .c2:before {
  box-shadow: none;
}

.c4 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  left: -3px;
  position: absolute;
  top: 28px;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id=""
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="c2 c3"
    htmlFor=""
  >
    Label
  </label>
  <div
    className="c4"
  >
    error message
  </div>
</div>
`;

exports[`<Checkbox /> should match the snapshot 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  pointer-events: none;
}

.c3 {
  display: block;
  margin-bottom: 5px;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4c4c4c;
  cursor: inherit;
  font-size: 16px;
  left: 0;
  margin-bottom: 0;
  min-height: 24px;
  padding-left: 24px;
  top: 0;
}

.c3:before {
  background-color: #FFFFFF;
  border-radius: 2px;
  border: 2px solid #999999;
  box-sizing: border-box;
  content: ' ';
  display: inline-block;
  height: 18px;
  left: 0;
  position: absolute;
  top: 3px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
}

.c1 {
  cursor: pointer;
  height: 18px;
  height: 100%;
  margin: 0;
  opacity: 0;
  pointer-events: initial;
  position: absolute;
  width: 100%;
}

.c1:checked + .c2:before {
  background-color: #1355d0;
  border-width: 0;
}

.c1:checked + .c2:after {
  border-radius: 1px;
  border: solid #FFFFFF;
  border-width: 0 2.5px 2.5px 0;
  content: ' ';
  display: inline-block;
  height: 11px;
  left: 6px;
  position: absolute;
  top: 3px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 4px;
}

.c1:hover + .c2:before {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] + .c2 {
  color: #999999;
}

.c1[disabled] + .c2:before {
  border-color: #999999;
  background-color: #cccccc;
}

.c1[disabled]:checked + .c2:before {
  background-color: #999999;
}

.c1[disabled]:hover + .c2:before {
  box-shadow: none;
}

.c4:checked + .c2:before {
  background-color: #1355d0;
  border-width: 0;
}

.c4:checked + .c2:after {
  border-radius: 1px;
  border: solid #FFFFFF;
  border-width: 0 2.5px 2.5px 0;
  content: ' ';
  display: inline-block;
  height: 11px;
  left: 6px;
  position: absolute;
  top: 3px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 4px;
}

.c4:hover + .c2:before {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c4 + .c2:before {
  border-color: #ff2d4d;
}

.c4:checked + .c2:before {
  background-color: #ff2d4d;
}

.c4:hover + .c2:before {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
}

.c4[disabled] + .c2 {
  color: #999999;
}

.c4[disabled] + .c2:before {
  border-color: #999999;
  background-color: #cccccc;
}

.c4[disabled]:checked + .c2:before {
  background-color: #999999;
}

.c4[disabled]:hover + .c2:before {
  box-shadow: none;
}

<div
  className="c0"
>
  <input
    checked={true}
    className="c1"
    disabled={false}
    id=""
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="c2 c3"
    htmlFor=""
  >
    Label
  </label>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 4`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  pointer-events: none;
}

.c3 {
  display: block;
  margin-bottom: 5px;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4c4c4c;
  cursor: inherit;
  font-size: 16px;
  left: 0;
  margin-bottom: 0;
  min-height: 24px;
  padding-left: 24px;
  top: 0;
}

.c3:before {
  background-color: #FFFFFF;
  border-radius: 2px;
  border: 2px solid #999999;
  box-sizing: border-box;
  content: ' ';
  display: inline-block;
  height: 18px;
  left: 0;
  position: absolute;
  top: 3px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
}

.c1 {
  cursor: pointer;
  height: 18px;
  height: 100%;
  margin: 0;
  opacity: 0;
  pointer-events: initial;
  position: absolute;
  width: 100%;
}

.c1:checked + .c2:before {
  background-color: #1355d0;
  border-width: 0;
}

.c1:checked + .c2:after {
  border-radius: 1px;
  border: solid #FFFFFF;
  border-width: 0 2.5px 2.5px 0;
  content: ' ';
  display: inline-block;
  height: 11px;
  left: 6px;
  position: absolute;
  top: 3px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 4px;
}

.c1:hover + .c2:before {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] + .c2 {
  color: #999999;
}

.c1[disabled] + .c2:before {
  border-color: #999999;
  background-color: #cccccc;
}

.c1[disabled]:checked + .c2:before {
  background-color: #999999;
}

.c1[disabled]:hover + .c2:before {
  box-shadow: none;
}

.c4:checked + .c2:before {
  background-color: #1355d0;
  border-width: 0;
}

.c4:checked + .c2:after {
  border-radius: 1px;
  border: solid #FFFFFF;
  border-width: 0 2.5px 2.5px 0;
  content: ' ';
  display: inline-block;
  height: 11px;
  left: 6px;
  position: absolute;
  top: 3px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 4px;
}

.c4:hover + .c2:before {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c4 + .c2:before {
  border-color: #ff2d4d;
}

.c4:checked + .c2:before {
  background-color: #ff2d4d;
}

.c4:hover + .c2:before {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
}

.c4[disabled] + .c2 {
  color: #999999;
}

.c4[disabled] + .c2:before {
  border-color: #999999;
  background-color: #cccccc;
}

.c4[disabled]:checked + .c2:before {
  background-color: #999999;
}

.c4[disabled]:hover + .c2:before {
  box-shadow: none;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={true}
    id=""
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="c2 c3"
    htmlFor=""
  >
    Label
  </label>
  
</div>
`;
